# FlowBridger

./: .gitignore  README.md
.github/workflows/: ci.yml
src/: FlowBridger.sln  build.ps1  buildlib.ps1
src/CPlusPlusTest/CppRuntimeTest/: CMakeLists.txt  flowbridger.h  main.cpp
src/CPlusPlusTest/CppTest/: CMakeLists.txt  CppTest.cpp  CppTest.h  flowbridger.h
src/CPlusPlusTest/CppTest/flowbridger/: flowbridger.h
src/FlowBridger/: AssemblyInfo.cs  FlowBridger.csproj  Program.cs
src/FlowBridger.UnitTests/: FlowBridger.UnitTests.csproj  LanguageGeneratorUnitTests.cs  SchemaParserUnitTests.cs  fullspecschema.spec
src/FlowBridger/Commands/: GenerateCommand.cs
src/FlowBridger/EmbeddedScripts/: Embedded.CSharp.Import.js  Embedded.Cpp.DynamicLinking.js  Embedded.Cpp.RuntimeLoading.js
src/FlowBridger/Enums/: ParsedContainerDataType.cs  ParsedDataType.cs
src/FlowBridger/Exceptions/: BridgerParseException.cs
src/FlowBridger/Generators/: GeneratedFile.cs  GeneratorSerializerContext.cs  LanguageGenerator.cs
src/FlowBridger/Models/: DataTypeModel.cs  EventModel.cs  MethodModel.cs  MethodParameterModel.cs  SchemaModel.cs
src/FlowBridger/Models/ConsoleCommands/: GenerateFilesCommand.cs
src/FlowBridger/Parsers/: DefaultSchemaLines.cs  ISchemaLines.cs  SchemaParser.cs
src/FlowBridger/Properties/: launchSettings.json
src/FlowBridgerTestLibrary/: FlowBridger.cs  FlowBridgerExportsHelpers.cs  FlowBridgerTestLibrary.csproj
